--- a/test/ty.html
+++ b/test/ty.html
@@ -1,1 +1,12 @@
 \\\\nycfsst\\LIB_FEEDS_PROD\\SalesPortalNewsLetter\\pdf_file\\Weekly Newsletter V8 (12.1-12.5).pdf
+
+ {
+        headerName: "FileName",
+        field: "fileLocation",
+        cellRenderer: DownloadCellRenderer,
+        filter: "agTextColumnFilter",
+        floatingFilter: true,
+        autoHeight: true,
+        wrapText: true,
+        flex:2
+      },
