--- a/test/asd.html
+++ b/test/asd.html
@@ -1,6 +1,7 @@
-
-http://nycuapp01:8020/RequestCrud/getTypes?requestUsageType=USER
-
-
-
-http://nycuapp01:8020/RequestCrud/getSubTypeByType?type=80
+http://nycuapp01:8020/RequestCrud/saveRange?type=80&subtype=8001&fromDate=2026-02-09&thruDate=2026-02-09&requestPriority=1&requestedBy=mayankp - POST
+type:80
+subtype:8001
+fromDate:2026-02-09
+thruDate:2026-02-09
+requestPriority:1
+requestedBy:mayankp
